--- a/TA-SecOnion_Hunting/default/data/ui/views/zeek_ntlm_overview.xml
+++ b/TA-SecOnion_Hunting/default/data/ui/views/zeek_ntlm_overview.xml
@@ -28,7 +28,7 @@
   <row>
     <panel>
       <single>
-        <title>Total NTLM Logs (Excluding Known Scanners)</title>
+        <title>Total NTLM Logs</title>
         <search>
           <query>| tstats summariesonly=f count from datamodel=Zeek_Suite.NTLM</query>
           <earliest>$Time.earliest$</earliest>
@@ -36,9 +36,11 @@
           <refresh>5m</refresh>
           <refreshType>delay</refreshType>
         </search>
-        <option name="link.visible">false</option>
         <option name="drilldown">none</option>
+        <option name="link.visible">0</option>
+        <option name="rangeColors">["0x53a051","0x0877a6","0xf8be34","0xf1813f","0xdc4e41"]</option>
         <option name="refresh.display">progressbar</option>
+        <option name="underLabel">Excluding Known Scanners</option>
       </single>
     </panel>
   </row>
