--- a/TA-SecOnion_Hunting/default/data/ui/views/zeek_snmp_overview.xml
+++ b/TA-SecOnion_Hunting/default/data/ui/views/zeek_snmp_overview.xml
@@ -40,6 +40,7 @@
         <search base="BaseSearch">
           <query>| stats count</query>
         </search>
+        <option name="link.visible">false</option>
         <option name="drilldown">none</option>
         <option name="rangeColors">["0x53a051","0x0877a6","0xf8be34","0xf1813f","0xdc4e41"]</option>
         <option name="refresh.display">progressbar</option>
@@ -54,6 +55,7 @@
         <search base="BaseSearch">
           <query>| stats count by community</query>
         </search>
+        <option name="link.visible">false</option>
         <option name="charting.chart">pie</option>
         <option name="charting.drilldown">none</option>
       </chart>
@@ -71,6 +73,7 @@ $Format$</query>
           <refresh>5m</refresh>
           <refreshType>delay</refreshType>
         </search>
+        <option name="link.visible">false</option>
         <option name="drilldown">none</option>
         <option name="refresh.display">progressbar</option>
         <format type="color" field="Count">
@@ -92,6 +95,7 @@ $Format$</query>
           <query>| where NOT (like(community, "public") OR like(community, "private"))
 $Format$</query>
         </search>
+        <option name="link.visible">false</option>
         <option name="drilldown">none</option>
         <option name="refresh.display">progressbar</option>
         <format type="color" field="Count">
@@ -113,6 +117,7 @@ $Format$</query>
           <query>| where like (community, "public")
 $Format$</query>
         </search>
+        <option name="link.visible">false</option>
         <option name="drilldown">none</option>
         <option name="refresh.display">progressbar</option>
         <format type="color" field="Count">
@@ -128,6 +133,7 @@ $Format$</query>
           <query>| where like (community, "private")
 $Format$</query>
         </search>
+        <option name="link.visible">false</option>
         <option name="drilldown">none</option>
         <option name="refresh.display">progressbar</option>
         <format type="color" field="Count">
